# caldav-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  caldav-mcp.service  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run-stdio.sh  tsconfig.json
src/: index.ts
src/caldav_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/caldav_mcp/tools/: __init__.py  calendars.py  events.py
src/tools/: create-event.ts  delete-event.ts  list-calendars.ts  list-events.test.ts  list-events.ts
src/utils/: recurrence.test.ts  recurrence.ts
