[project]
name = "caldav-mcp"
version = "1.0.0"
description = "MCP server for CalDAV calendar operations with multi-account support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.3.2",
    "caldav>=1.3.9",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "icalendar>=6.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
